# SimpleWebServer

./: CMakeLists.txt  README.md  SimpleServer  config.ini
doc/: request.txt
docs/: 压力测试.md
include/: webserver.h
include/connection_pool/: connection_pool.h
include/http/: http_conn.h  session.h
include/http_conn/: http_conn.h  session.h
include/lock/: lock.h  locker.h  thread_pool.h
include/log/: logger.h  logstream.h
include/server/: webServer.h
include/thread_pool/: thread_pool.h  threadpool.h
include/threadpool/: threadpool.h
include/timer/: timer.h
include/util/: config.h  noncopyable.h  util.h
root/: index.html
root/pages/user/: welcome.html
src/: main.cpp  webserver.cpp
src/connection_pool/: connect_pool.cpp  connection_pool.cpp
src/http/: http_conn.cpp
src/http_conn/: http_conn.cpp
src/lock/: lock.cpp
src/log/: logger.cpp  logstream.cpp
src/server/: webServer.cpp
src/thread_pool/: thread_pool.cpp
src/timer/: timer.cpp
src/util/: config.cpp  util.cpp
test/: webbench.md
